--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,25 @@ body {
     background-color: grey;
 }
 
+div.margin {
+    margin-top: 100px; 
+}
+
+.pdf-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    overflow: hidden;
+}
+
+.pdf-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .navbar {
     border-radius: 0px;
     position: fixed;
@@ -124,5 +143,11 @@ body {
 @media (min-width: 0px) and (max-width: 530px) {
     ul li a {
         font-size: 16px;
+    }
+}
+
+@media (min-width: 0px) and (max-width: 530px) {
+    .pdf-container {
+        height: 500px;
     }
 }
