--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 body {
     font-family: Cinzel-Regular;
-    background-color: lightgrey;;
+    background-color: grey;
 }
 
 div.margin {
@@ -15,6 +15,31 @@ div.margin {
 p.inline {
     display: inline; 
     float: right; 
+}
+
+div.contact {
+    box-sizing: border-box;
+    padding-top: 100px;
+    height: 325px; 
+    width: 100%;
+    background-color: darkgray; 
+}
+
+div.contact a {
+    color: white;
+}
+
+div.contact a:hover {
+    color: black;
+    text-decoration: none;
+}
+
+.text {
+    color: lightgrey; 
+}
+
+.phone {
+    color: white;
 }
 
 .container {
@@ -73,7 +98,7 @@ p.inline {
 
 .underline {
     box-sizing: border-box;
-    border-bottom: 1px solid darkgrey;
+    border-bottom: 1px solid black;
     padding-bottom: 10px;
     width: 20%;
 }
@@ -87,6 +112,10 @@ p.inline {
 
 .icon-style a i:hover {
     color: grey;
+}
+
+.contact-icon a i:hover {
+    color: black;
 }
 
 .welcome {
@@ -118,7 +147,7 @@ p.inline {
     box-sizing: border-box;
     background-color: #262626;
     height: auto;
-    border: 1px solid lightgrey;
+    border: 1px solid grey;
     width: 100%;
     position: fixed;
     z-index: 1;
