--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ div.contact a:hover {
 
 .welcome-img {
     height: 850px;
-    background: url("img/6DB.jpg") no-repeat center center fixed;
+    background: url("icons/background_wallpaper.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
