--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,11 @@ div.contact a:hover {
 .welcome {
     font-size: 70px;
     padding-top: 200px;
-    color: white;
+    color: #262626;
+}
+
+.dark-grey {
+    color: #262626;
 }
 
 .white {
