--- a/styles.css
+++ b/styles.css
@@ -137,8 +137,8 @@ div.contact a:hover {
 .welcome {
     font-size: 70px;
     padding-top: 200px;
-    color: black;
-    font-weight: 600px;
+    color: white;
+    font-weight: 600;
 }
 
 .black {
@@ -151,7 +151,7 @@ div.contact a:hover {
 
 .welcome-img {
     height: 850px;
-    background: url("icons/background_wallpaper.jpg") no-repeat center center fixed;
+    background: url("icons/black_white_beach.jpg") no-repeat center center fixed;
     -webkit-filter: grayscale(80%);
     -webkit-background-size: cover;
     -moz-background-size: cover;
