changed footer color

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ div.contact {
     padding-top: 100px;
     height: 325px;
     width: 100%;
-    background-color: darkgray;
+    background-color:#626065;
 }
 
 div.contact a {
