--- a/styles.css
+++ b/styles.css
@@ -137,8 +137,7 @@ div.contact a:hover {
 .welcome {
     font-size: 70px;
     padding-top: 200px;
-    /*color: white;*/
-    color: dark-grey;
+    color: white;
     font-weight: 600;
 }
 
