--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,11 @@ body {
     background-color: white;
 }
 
+.added-margin {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
 div.margin {
     margin-top: 100px;
 }
@@ -22,7 +27,7 @@ div.contact {
     padding-top: 100px;
     height: 325px;
     width: 100%;
-    background-color:#626065;
+    background-color: grey;
 }
 
 div.contact a {
