--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,9 @@ body {
     background-color: white;
 }
 
-.added-margin {
-    margin-top: 50px;
-    margin-bottom: 50px;
+.resume-margin {
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 div.margin {
